--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h1>Jewels</h1>
   <p> My personal webpage of interests and stuff!</p>
   <img src="127E28D5-961E-46A5-B99B-D4A2EDB7EE85.jpeg"/>
+  <div class="imgtxt"> Feel free to stay and look around </div>
   
   
   
