--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <h1>Jewels</h1>
   <p> My personal webpage of interests and stuff!</p>
-  <img src="127E28D5-961E-46A5-B99B-D4A2EDB7EE85.jpeg"/>
+  <background url:('https://github.com/ShalomiAhavah/website')>
   <div class="imgtxt"> Feel free to stay and look around </div>
   
   
