--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 </head>
 <body>
 
-  <h1>Jewels</h1>
-  <p> My personal webpage of interests and stuff!</p>
-  <background url:('https://github.com/ShalomiAhavah/website')>
-  <div class="imgtxt"> Feel free to stay and look around </div>
+  <h1 style="font-size: 100px">Jewels</h1>
+  <p style="font-size: 30px";> My personal webpage of interests and stuff!</p>
+  <div style="font-size: 30px;"> Feel free to stay and look around </div>
   
   
   
