--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 <body>
 
   <h1 style="font-size: 100px">Jewels</h1>
+ <div class="a">
   <p style="font-size: 30px";> My personal webpage of interests and stuff!</p>
   <div style="font-size: 30px;"> Feel free to stay and look around </div>
+  </div>
   
   
   
